--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+
     <nav>
       <div class="container-fluid">
         <ul>
@@ -19,5 +20,37 @@
       </nav>
       </div>
 
+      <div class="main container-fluid">
+        <div class="row">
+          <div class="col-xs-12 image">
+            <img src="images/169_1_Portrait.png" class="logo">
+          </div>
+        </div>
+      </div>
+
+      <div class="subArt container-fluid">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="art">
+              <h1 class="artTitle">Doodles</h1>
+              <div class="thumbnails">
+                <img src="images/thumbnails/110_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/121_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/134_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/153_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/169_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/182_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/208_1.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/CDR_27.jpg" class="img-responsive img-circle" alt="">
+                <!-- <img src="images/thumbnails/174_1.jpg" class="img-responsive img-circle" alt=""> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="subWeb container-fluid">
+
+      </div>
   </body>
 </html>
