Experiment with lightbox

--- a/index.html
+++ b/index.html
@@ -10,38 +10,52 @@
 
     <nav>
       <div class="container-fluid">
-        <ul>
-          <li>Luke Wyssmann</li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+        <ul class="list-unstyled list-inline navbar">
+          <li><a href="#doodles-section" class="link">Doodles</a></li>
+          <img src="images/logo2.png" id="logo"  alt="">
+          <li><a href="#web" class="link">Web</a></li>
         </ul>
-      </nav>
       </div>
+    </nav>
 
       <div class="main container-fluid">
         <div class="row">
-          <div class="col-xs-12 image">
-            <img src="images/169_1_Portrait.png" class="logo">
+          <div class="col-xs-12">
+            <div class="row">
+              <div class="col-sm-6" >
+                <img src="images/169_1_Portrait.png" class="img-responsive portrait">
+              </div>
+              <div class="col-sm-3 about-me">
+                <div class="about-me-info">
+                  <h1>Luke Wyssmann</h1>
+                  <h4>I am a freelance doodler with ten years of experience in the Adobe Creative Suite and two years of coding in various languages.</h4>
+                  <h4>I have experience creating album art for bands, poster-sized illustrations for individuals, extremely large murals, and digital assets for video games or websites. </h4>
+                  <h4></h4>
+                </div>
+                <div class="icons">
+                  <img src="images/thumbnails/fb.png" alt="">
+                  <img src="images/thumbnails/ig.png" alt="">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="subArt container-fluid">
+      <div class="subArt container-fluid" id="doodles-section">
         <div class="row">
           <div class="col-xs-12">
             <div class="art">
               <h1 class="artTitle">Doodles</h1>
               <div class="thumbnails">
-                <img src="images/thumbnails/110_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/121_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/134_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/153_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/169_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/182_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/208_1.jpg" class="img-responsive img-circle" alt="">
-                <img src="images/thumbnails/CDR_27.jpg" class="img-responsive img-circle" alt="">
+                <img src="images/thumbnails/110_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/121_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/134_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/153_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/169_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/182_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/208_1.jpg" class="img-responsive img-circle doodle" alt="">
+                <img src="images/thumbnails/CDR_27.jpg" class="img-responsive img-circle doodle" alt="">
                 <!-- <img src="images/thumbnails/174_1.jpg" class="img-responsive img-circle" alt=""> -->
               </div>
             </div>
